--- a/user/src/main/resources/templates/index.html
+++ b/user/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,7 @@
     <ul>
         <li>Enpoint: api/users</li>
         <li>GET;POST,PUT,DELETE</li>
+        <p>Driver:  <span th:text="${dbUri}"></span></p>
     </ul>
 </body>
 </html>
